--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "camoufox>=0.4.11",
     "httpx[http2]>=0.28.1",
     "loguru>=0.7.3",
     "tqdm>=4.67.1",
