--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "project"
+name = "aa-scraper"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -11,3 +11,11 @@ dependencies = [
     "tqdm>=4.67.1",
     "uuid>=1.30",
 ]
+
+# Add this section:
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["aa_scraper"]
