--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "camoufox",
+    "curl-cffi>=0.13.0",
     "httpx[http2]>=0.28.1",
     "loguru>=0.7.3",
     "python-dateutil>=2.9.0.post0",
