--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiofiles>=25.1.0",
     "camoufox>=0.4.11",
     "curl-cffi>=0.13.0",
     "httpx[http2]>=0.28.1",
     "loguru>=0.7.3",
+    "orjson>=3.11.4",
     "python-dateutil>=2.9.0.post0",
     "tqdm>=4.67.1",
     "uuid>=1.30",
