--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "httpx[http2]>=0.28.1",
     "loguru>=0.7.3",
     "orjson>=3.11.4",
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
     "python-dateutil>=2.9.0.post0",
     "tqdm>=4.67.1",
     "uuid>=1.30",
